==> RafaelDSG-2020/MSP430G2553/MSP430-LoRa-E32/src/EBYTE.cpp <==
#include "EBYTE.h"
#include "UART.h"
#define INPUT_PIN 0
#define OUTPUT_PIN 1
#define LOW_PIN 0
#define HIGH_PIN 1
#define PIN_M0 BIT1
#define PIN_M1 BIT2
#define AUX_PIN BIT4  // Assumindo que o pino AUX está conectado ao P1.4

void CompleteTask(unsigned long timeout) {
  unsigned long t = 0u;
  // ebyte_t *ebyte;
  pinMSPRead(P1OUT, ebyte->_AUX);

  if (pinMSPRead(P1OUT, ebyte->_AUX) == 0) {
    while (pinMSPRead(P1OUT, ebyte->_AUX) == 0) {
      delayEBYTE(1);
      t++;
      delayEBYTE(PIN_RECOVER);
      if (t > timeout) {
        break;
      }
    }
  } else {
    delayEBYTE(1000);
  }
  // delay(PIN_RECOVER);
}

void SetMode(uint8_t mode) {
  // data sheet claims module needs some extra time after mode setting (2ms)
  // most of my projects uses 10 ms, but 40ms is safer

  delayEBYTE(PIN_RECOVER);

  if (mode == MODE_NORMAL) {
    // Exemplo de uso com os pinos M0 e M1 representando P2.1 e P2.2
    if (mode == MODE_NORMAL) {
      pinMSPWrite(P2OUT, PIN_M0, LOW_PIN);
      pinMSPWrite(P2OUT, PIN_M1, LOW_PIN);

    } else if (mode == MODE_WAKEUP) {
      pinMSPWrite(P2OUT, PIN_M0, HIGH_PIN);
      pinMSPWrite(P2OUT, PIN_M1, LOW_PIN);

    } else if (mode == MODE_POWERDOWN) {
      pinMSPWrite(P2OUT, PIN_M0, LOW_PIN);
      pinMSPWrite(P2OUT, PIN_M1, HIGH_PIN);

    } else if (mode == MODE_PROGRAM) {
      pinMSPWrite(P2OUT, PIN_M0, HIGH_PIN);
      pinMSPWrite(P2OUT, PIN_M0, HIGH_PIN);
    }
  }

  // data sheet says 2ms later control is returned, let's give just a bit more
  // time these modules can take time to activate pins
  delayEBYTE(PIN_RECOVER);

  // clear out any junk
  // added rev 5
  // i've had some issues where after programming, the returned model is 0, and
  // all settings appear to be corrupt i imagine the issue is due to the
  // internal buffer full of junk, hence clearing
  ClearBuffer();

  // wait until aux pin goes back low
  CompleteTask(4000);
}

bool GetAux() {
  // ebyte_t *ebyte;
  return pinMSPRead(P1OUT, ebyte->_AUX);
}
